[tool.poetry]
name = "quart_example"
version = "0.1.0"
description = ""
authors = ["Austin Nieset <ajnieset@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.17.0"
quart-schema = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-asyncio = "^0.19.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
init_db = "quart_example:init_db"
start = "quart_example:run"
